2010-08-23  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.19 released.

2010-08-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (External packages): File attributes cache flushing
	for asynchronous processes.

2010-07-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Traces and Profiles): Describe verbose level 9.

2010-06-24  Glenn Morris  <rgm@gnu.org>

	* tramp.texi: Start direntry descriptions in column 32, per
	Texinfo convention.

2010-07-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Inline methods): Remove remark about doubled "-t"
	argument.
	(Frequently Asked Questions): Recommend "sshx" and "scpx" for
	echoing shells.

2010-07-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Inline methods): Remove "kludgy" phrase.
	(Filename Syntax): Describe port numbers.

2010-05-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Inline methods, Default Method): Mention
	`tramp-inline-compress-start-size'.

2010-03-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Auto-save and Backup): Remove reference to Emacs 21.
	(Frequently Asked Questions): Adapt supported (X)Emacs versions.
	Adapt supported MS Windows versions.  Remove obsolete URL.

2010-03-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Frequently Asked Questions): Use the $() syntax.
	texi2dvi reports errors with the backquotes.

2010-03-14  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.18 released.

2010-01-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Frequently Asked Questions): Add GNU Emacs 23 and
	SXEmacs 22 to the supported systems.  New item for hung ssh
	sessions.

2010-01-17  Juanma Barranquero  <lekktu@gmail.com>

	* tramp.texi (Remote processes): Fix typos.

2009-12-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Remote processes): Add missing <RET> in the example.

2009-11-29  Michael Albinus  <michael.albinus@gmx.de>
